DBC22-4005: Fixed embedded content overlapping in bulletins

--- a/src/frontend/src/App.scss
+++ b/src/frontend/src/App.scss
@@ -58,14 +58,15 @@ body {
 
   .cms-body {
     .responsive-object {
-      position: relative;
+      position: static;
+      padding-bottom: 2rem !important;
     }
 
     .responsive-object iframe,
     .responsive-object img,
     .responsive-object object,
     .responsive-object embed {
-      position: absolute;
+      position: static;
       top: 0;
       left: 0;
       width: 100%;
